5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1618_2936.log
== TEST (2019-04-02 10:09:54) 
-- CODE:
p = float(input"pressão? ")
n = float(input"mols? ")
t = float(input"temperatura? ")
t+= 273.15
R = 0.082
print((n*R*t)/p)
-- ERROR:
File "XXXX", line 1
    p = float(input"pressão? ")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:10:11) 
-- CODE:
p = float(input"pressao? ")
n = float(input"mols? ")
t = float(input"temperatura? ")
t+= 273.15
R = 0.082
print((n*R*t)/p)
-- ERROR:
File "XXXX", line 1
    p = float(input"pressao? ")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:12:25) 
-- CODE:
p = float(input ("pressao? "))
n = float(input("mols? "))
t = float(input("temperatura? "))
t+= 273.15
R = 0.082
print((n*R*t)/p)
-- OUTPUT:
29387.16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:13:27) 
-- CODE:
p = float(input ("pressao? "))
n = float(input("mols? "))
t = float(input("temperatura? "))
t+= 273.15
R = 0.082
print((n*R*t)/p)
-- EXECUTION TIME:
0.16496
-- TEST CASE 1:
---- input:
0.01
12
25.5
---- correct output:
29387.16
---- user output:
29387.16
-- TEST CASE 2:
---- input:
0.25
2
35.5
---- correct output:
202.4744
---- user output:
202.4744
-- TEST CASE 3:
---- input:
0.28
28
288.8
---- correct output:
4607.990000000001
---- user output:
4607.990000000001
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
